[gd_scene load_steps=7 format=3 uid="uid://b4xca7lc8vsi8"]

[ext_resource type="PackedScene" uid="uid://ww05yde5nb2t" path="res://scenes/terrain.tscn" id="1_huxbe"]
[ext_resource type="Texture2D" uid="uid://xkkeet22l731" path="res://imagese/grid.png" id="2_icbvx"]
[ext_resource type="Script" path="res://scenes/camera_2d.gd" id="2_ncewc"]
[ext_resource type="Script" path="res://control/CController.gd" id="3_dbxfm"]
[ext_resource type="Script" path="res://combat/Combat.gd" id="4_cujqt"]
[ext_resource type="PackedScene" uid="uid://ddgx1hll377nx" path="res://ui/ui.tscn" id="5_pc8ih"]

[node name="Game" type="Node"]

[node name="Terrain" parent="." instance=ExtResource("1_huxbe")]

[node name="Camera2D" type="Camera2D" parent="Terrain"]
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0
script = ExtResource("2_ncewc")

[node name="Select" type="Sprite2D" parent="Terrain"]
visible = false
position = Vector2(272, 208)
texture = ExtResource("2_icbvx")

[node name="VisualCombat" type="Node2D" parent="Terrain" node_paths=PackedStringArray("game_ui", "controller")]
y_sort_enabled = true
script = ExtResource("4_cujqt")
game_ui = NodePath("../../CanvasLayer/UI")
controller = NodePath("../../Controller")

[node name="Controller" type="Node2D" parent="." node_paths=PackedStringArray("combat")]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("3_dbxfm")
combat = NodePath("../Terrain/VisualCombat")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" node_paths=PackedStringArray("combat", "controller") instance=ExtResource("5_pc8ih")]
combat = NodePath("../../Terrain/VisualCombat")
controller = NodePath("../../Controller")
metadata/_edit_use_anchors_ = true

[connection signal="combat_start" from="Terrain/VisualCombat" to="Controller" method="combat_start"]
[connection signal="combatant_added" from="Terrain/VisualCombat" to="Controller" method="combatant_added"]
[connection signal="combatant_added" from="Terrain/VisualCombat" to="CanvasLayer/UI" method="add_combatant_status"]
[connection signal="combatant_died" from="Terrain/VisualCombat" to="Controller" method="combatant_died"]
[connection signal="combatant_died" from="Terrain/VisualCombat" to="CanvasLayer/UI" method="combatant_died"]
[connection signal="new_turn" from="Terrain/VisualCombat" to="Controller" method="new_phase_init"]
[connection signal="update_combatants" from="Terrain/VisualCombat" to="CanvasLayer/UI" method="update_combatants"]
[connection signal="update_information" from="Terrain/VisualCombat" to="CanvasLayer/UI" method="update_information"]
[connection signal="update_turn_queue" from="Terrain/VisualCombat" to="CanvasLayer/UI" method="update_turn_queue"]
[connection signal="combatant_deselected" from="Controller" to="CanvasLayer/UI" method="_combatant_deselected"]
[connection signal="combatant_lost_hp" from="Controller" to="Terrain/VisualCombat" method="update_hp_display"]
[connection signal="combatant_selected" from="Controller" to="CanvasLayer/UI" method="show_combatant_status_main"]
[connection signal="movement_changed" from="Controller" to="CanvasLayer/UI" method="set_movement"]
[connection signal="signal_end_phase" from="Controller" to="CanvasLayer/UI" method="update_combatants"]
[connection signal="signal_end_phase" from="Controller" to="CanvasLayer/UI" method="end_phase_ui_update"]
[connection signal="signal_end_turn" from="Controller" to="CanvasLayer/UI" method="end_phase_ui_update"]
[connection signal="target_selection_finished" from="Controller" to="CanvasLayer/UI" method="_target_selection_finished"]
[connection signal="target_selection_started" from="Controller" to="CanvasLayer/UI" method="_target_selection_started"]
[connection signal="end_phase" from="CanvasLayer/UI" to="Controller" method="end_phase"]
